--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Untitled</title>
+  <link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Grocery Store</title>
+
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+
+    <header class="banner">
+
+        <div class="offer-slider">
+
+            <img src="https://cloud-ijzlvpoz3-hack-club-bot.vercel.app/34ab049bfd342300711f8ec05f377e59b.jpeg" alt="Offer 1">
+
+            <img src="https://cloud-ijzlvpoz3-hack-club-bot.vercel.app/2f14ed378c2d44576eb826efad3f01ac1.jpeg" alt="Offer 2">
+
+            <img src="https://cloud-ijzlvpoz3-hack-club-bot.vercel.app/16908a0c93ad38a954012ef63da2f2b40.jpeg" alt="Offer 3">
+
+            <img src="https://cloud-ijzlvpoz3-hack-club-bot.vercel.app/0c97be632b9a25526d6c1746425124f2b.jpeg" alt="Offer 4">
+
+        </div>
+
+    </header>
+
+    <main>
+
+        <section class="grocery-section">
+
+            <h2>Grocery Items</h2>
+
+            <div class="item-container">
+
+                <button class="swipe-btn left-items">←</button>
+
+                <div class="item-slider"></div>
+
+                <button class="swipe-btn right-items">→</button>
+
+            </div>
+
+        </section>
+
+        <section class="dairy-section">
+
+            <h2>Dairy Items</h2>
+
+            <div class="item-container">
+
+                <button class="swipe-btn left-dairy">←</button>
+
+                <div class="item-slider"></div>
+
+                <button class="swipe-btn right-dairy">→</button>
+
+            </div>
+
+        </section>
+
+        <section class="bakery-section">
+
+            <h2>Bakery Items</h2>
+
+            <div class="item-container">
+
+                <button class="swipe-btn left-bakery">←</button>
+
+                <div class="item-slider"></div>
+
+                <button class="swipe-btn right-bakery">→</button>
+
+            </div>
+
+        </section>
+
+        <section class="cart-section">
+
+            <h2>Your Cart</h2>
+
+            <div class="cart-items">
+
+                <p>No items in the cart.</p>
+
+            </div>
+
+            <button class="clear-cart">Clear Cart</button>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+        <h2>Contact and Support</h2>
+
+        <p>Email: support@grocerystore.com</p>
+
+        <p>Phone: +123 456 7890</p>
+
+    </footer>
+
+    <script src="script.js"></script>
+
+</body>
+
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
